# simple-encryption

./: CMakeLists.txt  LICENSE  README.md  boot.sh
.github/workflows/: ci.yml
benchmarks/: bench_cipher.c
include/: MainWindow.h  cipher.h
src/: MainWindow.cpp  cipher.c  main.c  main.cpp
tests/: test_avalanche.cpp  test_rfc_7539.cpp  test_side_channels.cpp
